# diesel-enum-trouble

./: Cargo.toml  README.md  diesel.toml
.github/workflows/: rust.yml
migrations/2022-01-12-002953_create_enum_type/: down.sql  up.sql
migrations/2022-01-12-155552_add_message_row/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  types.rs
