[package]
edition = "2021"
name = "diesel-enum-trouble"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.8", features = ["postgres"]}
diesel-derive-enum = {version = "1.1.2", features = ["postgres"]}
dotenv = "0.15.0"
